Fix: Ukranian name

--- a/desktop/crust.desktop
+++ b/desktop/crust.desktop
@@ -601,7 +601,7 @@ Keywords[ja]=テキスト;エディタ;
 Keywords[ru]=текст;текстовый редактор;
 Keywords[sr]=Текст;едитор;
 Keywords[tr]=Metin;düzenleyici;
-Keywords[uk]=текст;редактор;
+Keywords[uk]=текстовий;редактор;
 Keywords[zh_CN]=Text;editor;文本;编辑器;
 Keywords=Text;editor;
 Comment=Extremely fast text editor
